--- a/views/forgotpassword.hbs
+++ b/views/forgotpassword.hbs
@@ -10,7 +10,7 @@
             </div>
         {{/if}}
       <div class="card-body">
-        <form action="/forgotpassword" method="post">
+        <form class="forgotMyPassword" action="/forgotpassword" method="post">
           <div class="form-group">
             <div class="form-label-group">
               <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required="required" autofocus="autofocus">
@@ -23,8 +23,7 @@
 </div>
 <br><br><br>
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" >
 var myemail = document.getElementById(email);
 $('.forgotMyPassword').on('submit',function(e){
