--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -23,10 +23,10 @@
         {{# if login }}
         <ul class="navbar-nav nav-flex-icons">
           <li class="nav-item">
-            <a class="nav-link waves-effect">
+            <a class="nav-link waves-effect" href="/dashboard">
               <span class="badge red z-depth-1 mr-1"> 1 </span>
               <i class="fas fa-shopping-cart"></i>
-              <span class="clearfix d-none d-sm-inline-block"> Cart </span>
+              <span class="clearfix d-none d-sm-inline-block"> Dashboard </span>
             </a>
           </li>
           <li class="nav-item">
