--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -208,6 +208,7 @@
                 <a>
                   <div class="mask rgba-white-slight"></div>
                 </a>
+
               </div>
               <!--Card image-->
 
@@ -228,7 +229,7 @@
                 <h4 class="font-weight-bold blue-text">
                   <strong>120$</strong>
                 </h4>
-
+                <a href="/store/{{this.email}}/{{this._id}}">Folu</a>
               </div>
               <!--Card content-->
 
