--- a/views/user/dashboard.hbs
+++ b/views/user/dashboard.hbs
@@ -195,10 +195,10 @@
                           <tbody>
                             {{# each this }}
                             <tr>
-                              <td>{{ this.email }}</td>
-                              <td>Lorem</td>
-                              <td>ipsum</td>
-                              <td>dolor</td>
+                              <td>{{ this._id }}</td>
+                              <td>{{ this.productCategory}}</td>
+                              <td>{{ this.productName}}</td>
+                              <td>{{ this.productDescription}}</td>
                               <td>sit</td>
                             </tr>
                           {{/each}}
