--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -26,12 +26,12 @@
   	<!-- Font Awesome -->
   	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
  	<!-- Bootstrap core CSS -->
-  	<link href="css/bootstrap.min.css" rel="stylesheet">
+  	<link href="/css/bootstrap.min.css" rel="stylesheet">
   	<!-- Material Design Bootstrap -->
-  	<link href="css/mdb.min.css" rel="stylesheet">
+  	<link href="/css/mdb.min.css" rel="stylesheet">
  	<!-- Your custom styles (optional) -->
- 	<link href="css/style.min.css" rel="stylesheet">
-  	<link rel="stylesheet" type="text/css" href="css/carousel.css">
+ 	<link href="/css/style.min.css" rel="stylesheet">
+  	<link rel="stylesheet" type="text/css" href="/css/carousel.css">
 
 	<script src='/sw.js'></script>
 </head>
