--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -23,23 +23,15 @@
         <div class="col-md-6 col-lg-7 text-center text-md-right">
 
           <!-- Facebook -->
-          <a class="fb-ic">
+          <a class="fb-ic" href="https://facebook.com">
             <i class="fab fa-facebook-f white-text mr-4"> </i>
           </a>
           <!-- Twitter -->
-          <a class="tw-ic">
+          <a class="tw-ic" href="">
             <i class="fab fa-twitter white-text mr-4"> </i>
           </a>
-          <!-- Google +-->
-          <a class="gplus-ic">
-            <i class="fab fa-google-plus-g white-text mr-4"> </i>
-          </a>
-          <!--Linkedin -->
-          <a class="li-ic">
-            <i class="fab fa-linkedin-in white-text mr-4"> </i>
-          </a>
           <!--Instagram-->
-          <a class="ins-ic">
+          <a class="ins-ic"  href="">
             <i class="fab fa-instagram white-text"> </i>
           </a>
 
