--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -29,7 +29,7 @@
               <span class="clearfix d-none d-sm-inline-block"> Dashboard </span>
             </a>
           </li>
-          <li class="nav-item">
+<!--           <li class="nav-item">
             <a href="/" class="nav-link waves-effect">
               <i class="fab fa-facebook-f"></i>
             </a>
@@ -38,7 +38,7 @@
             <a href="/" class="nav-link waves-effect">
               <i class="fab fa-twitter"></i>
             </a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a href="/logout" class="nav-link border border-light rounded waves-effect">
               <i class="fab fa-github mr-2"></i>Logout
