--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -203,8 +203,9 @@
 
               <!--Card image-->
               <div class="view overlay">
-                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top"
-                  alt="">
+                <img src="{{this.productImage}}" class="card-img-top"
+                  alt="{{this.productName}}">
+                  <!-- https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg -->
                 <a>
                   <div class="mask rgba-white-slight"></div>
                 </a>
@@ -216,20 +217,20 @@
               <div class="card-body text-center">
                 <!--Category & Title-->
                 <a href="" class="grey-text">
-                  <h5>{{ this.title }}</h5>
+                  <h5>{{ this.productName }}</h5>
                 </a>
                 <h5>
                   <strong>
-                    <a href="" class="dark-grey-text"><strong>{{ this.title }}</strong>
+                    <a href="" class="dark-grey-text"><strong>{{ this.productName }}</strong>
                       <span class="badge badge-pill danger-color">NEW</span>
                     </a>
                   </strong>
                 </h5>
 
                 <h4 class="font-weight-bold blue-text">
-                  <strong>120$</strong>
+                  <strong>${{this.productPrice}}</strong>
                 </h4>
-                <a href="/store/{{this.email}}/{{this._id}}">Folu</a>
+                <a href="/store/{{this.email}}/{{this._id}}">Link</a>
               </div>
               <!--Card content-->
 
