--- a/views/user/store.hbs
+++ b/views/user/store.hbs
@@ -8,17 +8,8 @@
 <!--Main layout-->
   <main class="mt-5 pt-4">
     <div class="container dark-grey-text mt-5">
-    	          <h3 class="my-4 h3">My Admin Store</h3>
-    	          <div>
-    	          	
-<hr>user
- {{this.user}}
-<hr>
-
-           
-           
-
-    	          </div>
+    	          <h3 class="my-4 h3">My Admin Store </h3>
+    	          <hr>
       <!--Grid row-->
       <div class="row wow fadeIn">
       	{{# each products }}
@@ -26,7 +17,7 @@
         <!--Grid column-->
         <div class="col-md-6 mb-4">
 
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/14.jpg" class="img-fluid" alt="">
+          <img src="{{this.productImage}}" class="img-fluid" alt="">
 
         </div>
         <!--Grid column-->
@@ -55,21 +46,16 @@
 
             <p class="lead font-weight-bold">{{this.productName}}</p>
 
-            <p>{{this.productDescription}}
+            <p>{{this.productDescription}}Some raandom text.Some raandom text.Some raandom text.Some raandom text.Some raandom text.Some raandom text.Some raandom text.Some raandom text.Some raandom text.Some raandom text.
 
               
            
            
           </p>
 
-            <form class="d-flex justify-content-left">
-              <!-- Default input -->
-              <!-- <input type="number" value="1" aria-label="Search" class="form-control" style="width: 100px"> -->
-              <button class="btn btn-primary btn-md my-0 p" type="submit">Contact
-                <i class="fas fa-shopping-cart ml-1"></i>
-              </button>
-
-            </form>
+            <p class="d-flex justify-content-left">
+              <a href="https://api.whatsapp/"><i class="fab fa-whatsapp" style="color:#56c590;font-size: 35px;"></i></a>
+            </p>
 
           </div>
           <!--Content-->
@@ -107,36 +93,45 @@
         <div class="col-md-6 text-center">
 
           <h4 class="my-4 h4">Additional Products</h4>
+          <p>
+
+          		
+
+          </p>
 
           <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> -->
 
 
                 <!--Grid row-->
 		      <div class="row wow fadeIn">
-
+		      	          	      	{{# each recents }}
+           {{# each this }}
 		        <!--Grid column-->
 		        <div class="col-lg-4 col-md-12 mb-4">
-
-		          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/11.jpg" class="img-fluid" alt="">
-
+		        	<a href="/store/{{this.email}}/{{this._id}}">
+		        		<img src="{{this.productImage}}" class="img-fluid" alt="">
+		        	</a>
+		          
+		          {{this.productName}}
 		        </div>
 		        <!--Grid column-->
+		            	{{/each}}{{/each}}
 
-		        <!--Grid column-->
+		        <!-- Grid column
 		        <div class="col-lg-4 col-md-6 mb-4">
 
 		          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/12.jpg" class="img-fluid" alt="">
 
 		        </div>
-		        <!--Grid column-->
+		        Grid column
 
-		        <!--Grid column-->
+		        Grid column
 		        <div class="col-lg-4 col-md-6 mb-4">
 
 		          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/13.jpg" class="img-fluid" alt="">
 
 		        </div>
-		        <!--Grid column-->
+		        Grid column--> 
 
 		      </div>
 		      <!--Grid row-->
