--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -222,13 +222,13 @@
                 <h5>
                   <strong>
                     <a href="" class="dark-grey-text"><strong>{{ this.productName }}</strong>
-                      <span class="badge badge-pill danger-color">NEW</span>
+                      <span class="badge badge-pill danger-color">{{ this.productStatus }}</span>
                     </a>
                   </strong>
                 </h5>
 
                 <h4 class="font-weight-bold blue-text">
-                  <strong>${{this.productPrice}}</strong>
+                  <!-- <strong>${{this.productPrice}}</strong> -->
                 </h4>
                 <a href="/store/{{this.email}}/{{this._id}}">Link</a>
               </div>
@@ -296,30 +296,6 @@
     </div>
   </main>
   <!--Main layout-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
