--- a/views/user/stocks.hbs
+++ b/views/user/stocks.hbs
@@ -6,57 +6,73 @@
 				<!-- col-md-3 -->
 				<div class="col-md-3">
 					<!-- LIST GROUP -->
+					<span>Categories</span>
 					<div class="list-group-flush">
 					  <div class="list-group-item">
-					  	<span>Categories</span>
+					    <p class="mb-0"> 
+					    	<a href="/stocks/Automobile">
+					    		<i class="fas fa-car mr-4 mr-4 grey p-3 white-text rounded-circle" aria-hidden="true"></i>
+					    		Automobile
+					    	</a>
+					    </p>
+					  </div>
+					  <div class="list-group-item">
+					    <p class="mb-0">
+					    	<a href="/stocks/Body-Accessories">
+					    		<i class="fas fa-ribbon mr-4 grey p-3 white-text rounded-circle " aria-hidden="true"></i>Body Accessories
+					    	</a>
+					    </p>
+					  </div>
+					  <div class="list-group-item">
+					    <p class="mb-0">
+					    	<a href="/stocks/Clothings">
+					    		<i class="fab fa-firstdraft mr-4 grey p-3 white-text rounded-circle " aria-hidden="true"></i>Clothings
+					    	</a>
+					    </p>
+					  </div>
+					  <div class="list-group-item">
 					    <p class="mb-0">
 					    	<a href="/stocks/Electronics">
-					    		<i class="far fa-image mr-4 grey p-3 white-text rounded-circle " aria-hidden="true"></i>Electronics
+					    		<i class="fas fa-charging-station mr-4 grey p-3 white-text rounded-circle" aria-hidden="true"></i>Electronics
 					    	</a>
 					 	</p>
 					  </div>
 					  <div class="list-group-item">
 					    <p class="mb-0"> 
-					    	<a href="/stocks/Automobile">
-					    		<i class="fas fa-briefcase mr-4 mr-4 grey p-3 white-text rounded-circle" aria-hidden="true"></i>Automobile
+					    	<a href="/stocks/Foods">
+					    		<i class="fas fa-drumstick-bite mr-4 mr-4 grey p-3 white-text rounded-circle" aria-hidden="true"></i>Foods
+					    	</a>
+					    </p>
+					  </div>
+					  <div class="list-group-item">
+					    <p class="mb-0"> 
+					    	<a href="/stocks/Home-Appliances">
+					    		<i class="fas fa-rainbow mr-4 mr-4 grey p-3 white-text rounded-circle" aria-hidden="true"></i>Home Appliances
 					    	</a>
 					    </p>
 					  </div>
 					  <div class="list-group-item">
 					    <p class="mb-0">
-					    	<a href="/stocks/Others">
-					    		<i class="fas fa-anchor mr-4 mr-4 grey p-3 white-text rounded-circle" aria-hidden="true"></i>Others
-					    	</a>
-					    </p>
-					  </div>
-					  <div class="list-group-item">
-					    <p class="mb-0">
-					    	<a href="/stocks/female">
-					    		<i class="far fa-image mr-4 grey p-3 white-text rounded-circle " aria-hidden="true"></i>NOTWORKING
+					    	<a href="/stocks/Office-Appliances">
+					    		<i class="fas fa-magic mr-4 mr-4 grey p-3 white-text rounded-circle" aria-hidden="true"></i>Office Appliances
 					    	</a>
 					    </p>
 					  </div>
 					  <div class="list-group-item">
 					    <p class="mb-0"> 
-					    	<a href="/stocks/female">
-					    		<i class="fas fa-briefcase mr-4 mr-4 grey p-3 white-text rounded-circle" aria-hidden="true"></i>NOTWorkING
+					    	<a href="/stocks/Services">
+					    		<i class="fas fa-people-carry mr-4 mr-4 grey p-3 white-text rounded-circle" aria-hidden="true"></i>Services
 					    	</a>
 					    </p>
 					  </div>
 					  <div class="list-group-item">
 					    <p class="mb-0"> 
-					    	<a href="/stocks/female">
-					    		<i class="fas fa-briefcase mr-4 mr-4 grey p-3 white-text rounded-circle" aria-hidden="true"></i>Work
+					    	<a href="/stocks/Shoes">
+					    		<i class="fas fa-th mr-4 mr-4 grey p-3 white-text rounded-circle" aria-hidden="true"></i>Others
 					    	</a>
 					    </p>
 					  </div>
-					  <div class="list-group-item">
-					    <p class="mb-0"> 
-					    	<a href="/stocks/female">
-					    		<i class="fas fa-briefcase mr-4 mr-4 grey p-3 white-text rounded-circle" aria-hidden="true"></i>Work
-					    	</a>
-					    </p>
-					  </div>
+
 					  <!--// LIST GROUP -->					
 					</div>
 					</div>
